--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@ img {
 .portfolio-list-box {
   padding-bottom: 20px;
   padding-top: 20px;
+  padding-left: 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -352,7 +353,6 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-title-color);
-  text-align: center;
 
   margin-bottom: 4px;
 }
@@ -361,7 +361,6 @@ img {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  text-align: center;
 }
 
 /* -----------------footer----------------- */
