--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,8 @@ img {
 .portfolio-list-box {
   padding-bottom: 20px;
   padding-top: 20px;
-  padding-left: 24px;
+  padding-left: 25px;
+  padding-right: 25px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
