--- a/css/style.css
+++ b/css/style.css
@@ -341,10 +341,7 @@ img {
 }
 
 .portfolio-list-box {
-  padding-bottom: 20px;
-  padding-top: 20px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 20px 24px 20px 24px;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
