--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ button {
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   padding: 0 15px;
   /* background-color: tomato; */
   margin: 0 auto;
@@ -65,21 +65,10 @@ button {
   padding-bottom: 94px;
 }
 
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 /* -----------------header----------------- */
 .header {
@@ -174,6 +163,12 @@ img {
   padding-bottom: 200px;
 }
 
+.flax {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 .hero-title {
   font-weight: 900;
   font-size: 44px;
@@ -183,6 +178,7 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 
+  max-width: 695px;
   margin-bottom: 30px;
 }
 
@@ -203,7 +199,9 @@ img {
 }
 
 /* -----------------benefits----------------- */
-
+.benefits {
+  padding-bottom: 0;
+}
 .benefits-list {
   display: flex;
   justify-content: space-between;
@@ -258,14 +256,16 @@ img {
   margin-bottom: 50px;
 }
 .team-box {
-  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-item {
   background-color: #ffffff;
 
-  padding-bottom: 30px;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-list {
@@ -295,7 +295,7 @@ img {
   display: flex;
   justify-content: center;
 
-  padding-bottom: 34px;
+  margin-bottom: 34px;
 }
 
 .portfolio-buttons-item:not(:last-child) {
@@ -365,9 +365,6 @@ img {
 
 .footer {
   background-color: #2f303a;
-}
-
-.footer .container {
   padding: 60px 0;
 }
 
